--- a/source/catalog.html
+++ b/source/catalog.html
@@ -194,10 +194,147 @@
                                                 />
                                             </div>
                                         </li>
-                                        <li class="aside-filter__item-list"></li>
-                                        <li class="aside-filter__item"></li>
-                                        <li class="aside-filter__item"></li>
-                                        <li class="aside-filter__item"></li>
+                                        <li class="aside-filter__item-list">
+                                            <div class="filter__item-list">
+                                                <p class="filter__item-list-title">Мощность, л.с.</p>
+                                                <select class="filter-style filter__item-list-select">
+                                                    <option>90</option>
+                                                    <option>130</option>
+                                                    <option>154</option>
+                                                    <option>230</option>
+                                                </select>
+                                            </div>
+                                            <div class="filter__item-list">
+                                                <p class="filter__item-list-title">Мощность двигателя, л.с.</p>
+                                                <select class="filter-style filter__item-list-select">
+                                                    <option>90</option>
+                                                    <option>130</option>
+                                                    <option>154</option>
+                                                    <option>230</option>
+                                                </select>
+                                            </div>
+                                            <div class="filter__item-list">
+                                                <p class="filter__item-list-title">Макс. скорость</p>
+                                                <select class="filter-style filter__item-list-select">
+                                                    <option>90</option>
+                                                    <option>130</option>
+                                                    <option>154</option>
+                                                    <option>230</option>
+                                                </select>
+                                            </div>
+                                        </li>
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Бренд</p>
+                                            <div class="aside-filter__content">
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked >
+                                                        BRP</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked>
+                                                        Spark 2</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        Spark 3</label>
+                                                </div>
+                                                <div class="filter-more">
+                                                    <button class="filter-more__btn" href="#">Показать еще</button>
+                                                </div>
+                                            </div>
+                                        </li>
+
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Модель</p>
+                                            <div class="aside-filter__content">
+                                                <input class="filter-search" type="text" placeholder="Введите модель">
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked>
+                                                        Sea-doo Spark 2</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked>
+                                                        SeaDoo Spark 90 </label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        SeaDoo GTI 155</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        SeaDoo GTR 230</label>
+                                                </div>
+                                                <div class="filter-more">
+                                                    <button class="filter-more__btn" href="#">Показать еще</button>
+                                                </div>
+                                            </div>
+                                        </li>
+
+                                        <li class="aside-filter__item-drop btn-checked">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Акции</p>
+                                            <div class="aside-filter__content">
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        <span class="btn-checked__text">SALE</span>
+                                                    </label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        <span class="btn-checked__text">NEW</span>
+                                                    </label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        <span class="btn-checked__text">HIT</span>
+                                                    </label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        <span class="btn-checked__text">ДИЛЕР</span>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </li>
+
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Страны</p>
+                                            <div class="aside-filter__content">
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked>
+                                                        Россия</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" checked>
+                                                        Германия</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        Китай</label>
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label class="aside-filter__content-label">
+                                                        <input class="filter-style" type="checkbox" >
+                                                        CША</label>
+                                                </div>
+                                                <div class="filter-more">
+                                                    <button class="filter-more__btn" href="#">Показать еще</button>
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
                                 </form>
                             </div>
