--- a/source/product-page.html
+++ b/source/product-page.html
@@ -63,7 +63,7 @@
                         <a class="menu-categories__link" href="#">Катера</a>
                     </li>
                     <li class="menu-categories__item">
-                        <a class="menu-categories__link" href="#">Гидроциклы</a>
+                        <a class="menu-categories__link" href="catalog.html">Гидроциклы</a>
                     </li>
                     <li class="menu-categories__item">
                         <a class="menu-categories__link" href="#">Лодки</a>
@@ -92,7 +92,7 @@
                     <a href="#">Каталог</a>
                 </li>
                 <li class="breadcrumbs__list-item">
-                    <a href="#">Гидроциклы</a>
+                    <a href="catalog.html">Гидроциклы</a>
                 </li>
                 <li class="breadcrumbs__list-item">
                     <span>Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic</span>
@@ -100,6 +100,71 @@
             </ul>
         </div>
     </div>
+
+    <section class="product-card">
+        <div class="container">
+            <div class="product-card__inner">
+                <div class="product-card__img-box product-item--sale">
+                    <img src="img/content/gidrotsikl-large.png" alt="" class="product-card__img">
+                    <p class="product-card__price-old">1 200 475 ₽</p>
+                    <p class="product-card_price-new">1 100 475 ₽</p>
+                    <a href="#" class="product-card__link">Нашли дешевле? Снизим цену!</a>
+                </div>
+                <div class="product-card__content">
+                    <h1 class="product-card__title">Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic</h1>
+                    <p class="product-card__code">Код товара: 366666-2 </p>
+                    <div class="product-card__buttons">
+                        <button class="product-card__icon-favorite">
+                            <img src="img/heart-icon.svg" alt="like">
+                        </button>
+                        <button class="product-card__icon-comparison">
+                            <img src="img/comparison.svg" alt="comparison">
+                        </button>
+                        <div class="rate">
+
+                        </div>
+                    </div>
+                    <div class="tabs-wrapper product-card__tabs">
+                        <div class="tabs">
+                            <a class="tab product-card__tab tab--active" href="#product-1">Характеристики</a>
+                            <a class="tab product-card__tab" href="#product-2">Наличие в магазине</a>
+                        </div>
+                        <div class="tabs-container">
+                            <div id="product-1" class="tabs-content product-card__tab-content tabs-content--active">
+                                <ul class="product-card__list">
+                                    <li class="product-card__item">
+                                        <div class="product-card__item-left">Производитель</div>
+                                        <div class="product-card__item-right">Канада</div>
+                                    </li>
+                                    <li class="product-card__item">
+                                        <div class="product-card__item-left">Количество мест, шт: </div>
+                                        <div class="product-card__item-right">3</div>
+                                    </li>
+                                    <li class="product-card__item">
+                                        <div class="product-card__item-left">Мощность, л.с.</div>
+                                        <div class="product-card__item-right">155</div>
+                                    </li>
+                                    <li class="product-card__item">
+                                        <div class="product-card__item-left">Тип двигателя</div>
+                                        <div class="product-card__item-right">Бензиновый</div>
+                                    </li>
+                                    <li class="product-card__item">
+                                        <div class="product-card__item-left">Год выпуска</div>
+                                        <div class="product-card__item-right">2018</div>
+                                    </li>
+                                </ul>
+                                <a href="#" class="product-card__more">Показать еще</a>
+                                <div class="product-card__btn">
+                                    <button>купить</button>
+                                </div>
+                            </div>
+                            <div id="product-2" class="tabs-content product-card__tab-content">content-2</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
@@ -188,12 +253,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
-<!-- <div class="tabs-wrapper">
-    <div class="tabs">
-        <a class="tab tab--active" href="#"></a>
-    </div>
-    <div class="tabs-container">
-        <div class="tabs-content"></div>
-    </div>
-</div> -->
