--- a/source/product-page.html
+++ b/source/product-page.html
@@ -208,7 +208,7 @@
         </div>
     </div>
 
-    <!-- <section class="product-card">
+    <section class="product-card">
         <div class="container">
             <div class="product-card__inner">
                 <div class="product-card__img-box product-item--sale">
@@ -216,6 +216,9 @@
                     <p class="product-card__price-old">1 200 475 ₽</p>
                     <p class="product-card_price-new">1 100 475 ₽</p>
                     <a href="#" class="product-card__link">Нашли дешевле? Снизим цену!</a>
+                    <div class="product-card__btn product-card__btn-mobile">
+                        <button>купить</button>
+                    </div>
                 </div>
                 <div class="product-card__content">
                     <h1 class="product-card__title">Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic</h1>
@@ -276,7 +279,7 @@
     <section class="card__tabs">
         <div class="container">
             <div class="tabs-wrapper">
-                <div class="tabs card__tab-box">
+                <div class="tabs card__tab-box mobile-overflow">
                     <a class="tab card__tab" href="#product-card__tabs-1">О товаре</a>
                     <a class="tab card__tab" href="#product-card__tabs-2">Характеристики</a>
                     <a class="tab card__tab" href="#product-card__tabs-3">Отзывы</a>
@@ -285,103 +288,103 @@
                     <a class="tab card__tab" href="#product-card__tabs-6">Cервис</a>
                     <a class="tab card__tab" href="#product-card__tabs-7">Гарантия</a>
                 </div>
-                <div class="tabs-container">
-                    <div id="product-card__tabs-1" class="card__tab-content tabs-content">content</div>
-                    <div id="product-card__tabs-2" class="card__tab-content tabs-content">content</div>
-                    <div id="product-card__tabs-3" class="card__tab-content tabs-content">content</div>
-                    <div id="product-card__tabs-4" class="card__tab-content tabs-content tabs-content--active">
-                        <form>
-                            <div class="card__top-line">
-                                <label class="card__label-search" for="">Магазин
-                                    <input class="card__input-search" type="text">
-                                </label>
-                                <label class="card__label-pickup" for="">
-                                    <input class="filter-style" type="radio" name="pickup">Забрать сегодня
-                                </label>
-                                <label class="card__label-pickup" for="">
-                                    <input class="filter-style" type="radio" name="pickup" checked>Забрать в течение
-                                    недели
-                                </label>
-                            </div>
-                            <ul class="card__list">
-                                <li class="card__list-item card__list-itemtitle">
-                                    <div class="card__list-address">Адрес</div>
-                                    <div class="card__list-workhours">Режим работы</div>
-                                    <div class="card__list-avialable">Доступно</div>
-                                    <div class="card__list-num">Количество</div>
-                                    <div class="card__list-btn"></div>
-                                </li>
-                                <li class="card__list-item">
-                                    <div class="card__list-address">Москва, ул. Науки 25</div>
-                                    <div class="card__list-workhours">
-                                        <div class="workhours">
-                                            <span>пн-сб:</span><span>08:00-19:00</span>
-                                        </div>
-                                        <div class="workhours">
-                                            <span>вс:</span><span>09:00-17:00</span>
-                                        </div>
+            </div>
+            <div class="tabs-container">
+                <div id="product-card__tabs-1" class="card__tab-content tabs-content">content</div>
+                <div id="product-card__tabs-2" class="card__tab-content tabs-content">content</div>
+                <div id="product-card__tabs-3" class="card__tab-content tabs-content">content</div>
+                <div id="product-card__tabs-4" class="card__tab-content tabs-content tabs-content--active">
+                    <form>
+                        <div class="card__top-line">
+                            <label class="card__label-search" for="">Магазин
+                                <input class="card__input-search" type="text">
+                            </label>
+                            <label class="card__label-pickup" for="">
+                                <input class="filter-style" type="radio" name="pickup">Забрать сегодня
+                            </label>
+                            <label class="card__label-pickup" for="">
+                                <input class="filter-style" type="radio" name="pickup" checked>Забрать в течение
+                                недели
+                            </label>
+                        </div>
+                        <ul class="card__list">
+                            <li class="card__list-item card__list-itemtitle">
+                                <div class="card__list-address">Адрес</div>
+                                <div class="card__list-workhours">Режим работы</div>
+                                <div class="card__list-avialable">Доступно</div>
+                                <div class="card__list-num">Количество</div>
+                                <div class="card__list-btn"></div>
+                            </li>
+                            <li class="card__list-item">
+                                <div class="card__list-address">Москва, ул. Науки 25</div>
+                                <div class="card__list-workhours">
+                                    <div class="workhours">
+                                        <span>пн-сб:</span><span>08:00-19:00</span>
                                     </div>
-                                    <div class="card__list-avialable">В наличии</div>
-                                    <div class="card__list-num">1</div>
-                                    <div class="card__list-btn">
-                                        <button type="submit">купить</button>
+                                    <div class="workhours">
+                                        <span>вс:</span><span>09:00-17:00</span>
                                     </div>
-                                </li>
-                                <li class="card__list-item">
-                                    <div class="card__list-address">Москва, ул. Южная 134</div>
-                                    <div class="card__list-workhours">
-                                        <div class="workhours">
-                                            <span>пн-сб:</span><span>08:00-19:00</span>
-                                        </div>
-                                        <div class="workhours">
-                                            <span>вс:</span><span>09:00-17:00</span>
-                                        </div>
+                                </div>
+                                <div class="card__list-avialable">В наличии</div>
+                                <div class="card__list-num">1</div>
+                                <div class="card__list-btn">
+                                    <button type="submit">купить</button>
+                                </div>
+                            </li>
+                            <li class="card__list-item">
+                                <div class="card__list-address">Москва, ул. Южная 134</div>
+                                <div class="card__list-workhours">
+                                    <div class="workhours">
+                                        <span>пн-сб:</span><span>08:00-19:00</span>
                                     </div>
-                                    <div class="card__list-avialable">В наличии</div>
-                                    <div class="card__list-num">2</div>
-                                    <div class="card__list-btn">
-                                        <button type="submit">купить</button>
+                                    <div class="workhours">
+                                        <span>вс:</span><span>09:00-17:00</span>
                                     </div>
-                                </li>
-                                <li class="card__list-item">
-                                    <div class="card__list-address">Санкт-Петербург,<br>ул. Красная 19</div>
-                                    <div class="card__list-workhours">
-                                        <div class="workhours">
-                                            <span>пн-сб:</span><span>08:00-19:00</span>
-                                        </div>
-                                        <div class="workhours">
-                                            <span>вс:</span><span>09:00-17:00</span>
-                                        </div>
+                                </div>
+                                <div class="card__list-avialable">В наличии</div>
+                                <div class="card__list-num">2</div>
+                                <div class="card__list-btn">
+                                    <button type="submit">купить</button>
+                                </div>
+                            </li>
+                            <li class="card__list-item">
+                                <div class="card__list-address">Санкт-Петербург,<br>ул. Красная 19</div>
+                                <div class="card__list-workhours">
+                                    <div class="workhours">
+                                        <span>пн-сб:</span><span>08:00-19:00</span>
                                     </div>
-                                    <div class="card__list-avialable">Нет в наличии</div>
-                                    <div class="card__list-num">0</div>
-                                    <div class="card__list-btn">
-                                        <button type="submit">купить</button>
+                                    <div class="workhours">
+                                        <span>вс:</span><span>09:00-17:00</span>
                                     </div>
-                                </li>
-                                <li class="card__list-item">
-                                    <div class="card__list-address">Киев, ул Шевченко 167</div>
-                                    <div class="card__list-workhours">
-                                        <div class="workhours">
-                                            <span>пн-сб:</span><span>08:00-19:00</span>
-                                        </div>
-                                        <div class="workhours">
-                                            <span>вс:</span><span>09:00-17:00</span>
-                                        </div>
+                                </div>
+                                <div class="card__list-avialable">Нет в наличии</div>
+                                <div class="card__list-num">0</div>
+                                <div class="card__list-btn">
+                                    <button type="submit">купить</button>
+                                </div>
+                            </li>
+                            <li class="card__list-item">
+                                <div class="card__list-address">Киев, ул Шевченко 167</div>
+                                <div class="card__list-workhours">
+                                    <div class="workhours">
+                                        <span>пн-сб:</span><span>08:00-19:00</span>
                                     </div>
-                                    <div class="card__list-avialable">Нет в наличии</div>
-                                    <div class="card__list-num">0</div>
-                                    <div class="card__list-btn">
-                                        <button type="submit">купить</button>
+                                    <div class="workhours">
+                                        <span>вс:</span><span>09:00-17:00</span>
                                     </div>
-                                </li>
-                            </ul>
-                        </form>
-                    </div>
-                    <div id="product-card__tabs-5" class="card__tab-content tabs-content">content</div>
-                    <div id="product-card__tabs-6" class="card__tab-content tabs-content">content</div>
-                    <div id="product-card__tabs-7" class="card__tab-content tabs-content">content</div>
+                                </div>
+                                <div class="card__list-avialable">Нет в наличии</div>
+                                <div class="card__list-num">0</div>
+                                <div class="card__list-btn">
+                                    <button type="submit">купить</button>
+                                </div>
+                            </li>
+                        </ul>
+                    </form>
                 </div>
+                <div id="product-card__tabs-5" class="card__tab-content tabs-content">content</div>
+                <div id="product-card__tabs-6" class="card__tab-content tabs-content">content</div>
+                <div id="product-card__tabs-7" class="card__tab-content tabs-content">content</div>
             </div>
         </div>
     </section>
@@ -688,7 +691,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <footer class="footer">
         <div class="container">
